upd simple things

--- a/front/src/app/auth/login/login.component.html
+++ b/front/src/app/auth/login/login.component.html
@@ -13,7 +13,7 @@
         <button type="submit">Login</button>
       </form>
 
-      <p class="signup-text">Don’t have an account? <a routerLink="/register">Sign up</a></p>
+      <p class="signup-text">Don’t have an account? <a routerLink="/auth/register">Sign up</a></p>
     </div>
   </div>
 </div>
